feat: Adicionado troca de estados das cartas

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,9 +6,9 @@ $card-bg-pattern: linear-gradient(135deg, #eceddc 25%, transparent 25%),
   linear-gradient(45deg, #eceddc 25%, transparent 25%);
 $card-bg-pattern-size: 30px 30px;
 $card-inactive: #d8d8d8;
-$card-chosen: #00b1f4;
+$card-active: #00b1f4;
 $card-correct: #00b335;
-$card-error: #ff424e;
+$card-incorrect: #ff424e;
 
 $btn-color-easy: #00b335;
 $btn-color-medium: #333;
